Update and rename dota2sorter.html to main.html

--- a/main.html
+++ b/main.html
@@ -835,7 +835,7 @@ showImage();
  
 </script>
 <p class="other">
-<center><small>A big thanks to mostlypoptarts, roosterteethcs, jesseepinkman, and yvesdot.</center></small>
+<center><small>A big thanks to mostlypoptarts, roosterteethcs, jesseepinkman, and yvesdot. Updated up to 7.39</center></small>
 </p>
  
 <!-- BEGIN TUMBLR CODE -->
