--- a/main.html
+++ b/main.html
@@ -558,7 +558,7 @@ str += `
     <table style="width:200px; font-size: 1.1rem; line-height: 1.3; margin-left:auto; margin-right:auto; border:1px solid #000; border-collapse:collapse" align="center">
       <tr>
         <td style="color:#ffffff; background-color:#000; text-align:center;">Rank</td>
-        <td style="color:#ffffff; background-color:#000; text-align:center;">Song</td>
+        <td style="color:#ffffff; background-color:#000; text-align:center;">Hero</td>
       </tr>
   `;
  
