--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
  
 <head>
  
-<link rel="shortcut icon" href="https://i.imgur.com/s31zuFU.png">
+<link rel="shortcut icon" href="https://static.wikia.nocookie.net/dota2_gamepedia/images/4/4a/Site-favicon.ico/revision/latest?cb=20210628140408">
  
 <meta charset="utf-8">
  
