--- a/main.html
+++ b/main.html
@@ -3,8 +3,9 @@
 <html>
  
 <head>
+ <title>Dota 2 Sorter</title>
  
-<link rel="shortcut icon" href="https://static.wikia.nocookie.net/dota2_gamepedia/images/4/4a/Site-favicon.ico/revision/latest?cb=20210628140408">
+<link rel="shortcut icon" href="dotaicon.png">
  
 <meta charset="utf-8">
  
@@ -753,9 +754,9 @@ a:active {
  
 </style>
  
-<!-- BEGIN TUMBLR FACEBOOK OPENGRAPH TAGS --><!-- If you'd like to specify your own Open Graph tags, define the og:url and og:title tags in your theme's HTML. --><!-- Read more: http://ogp.me/ --><meta property="fb:app_id" content="48119224995" /><meta property="og:site_name" content="" /><meta property="og:title" content="Custom Sorter" /><meta property="og:url" content="" /><meta property="og:description" content="A custom sorter page hosted on Tumblr. Rank your favorites!" /><meta property="og:determiner" content="a" /><meta property="og:type" content="tumblr-feed:entry" /><meta property="og:image" content="https://assets.tumblr.com/images/og/text_200.png" /><!-- END TUMBLR FACEBOOK OPENGRAPH TAGS -->
+<!-- BEGIN TUMBLR FACEBOOK OPENGRAPH TAGS --><!-- If you'd like to specify your own Open Graph tags, define the og:url and og:title tags in your theme's HTML. --><!-- Read more: http://ogp.me/ --><meta property="fb:app_id" content="48119224995" /><meta property="og:site_name" content="" /><meta property="og:title" content="Dota 2 Sorter" /><meta property="og:url" content="" /><meta property="og:description" content="A Dota 2 sorter page. Rank your favorites!" /><meta property="og:determiner" content="a" /><meta property="og:type" content="tumblr-feed:entry" /><meta property="og:image" content="https://assets.tumblr.com/images/og/text_200.png" /><!-- END TUMBLR FACEBOOK OPENGRAPH TAGS -->
  
-<!-- TWITTER TAGS --><meta charset="utf-8"><meta name="twitter:card" content="summary" /><meta name="twitter:description" content="A custom sorter page hosted on Tumblr. Rank your favorites!" /><meta name="twitter:title" content="Custom Sorter" /><meta name="twitter:site" content="tumblr" /><!-- END TWITTER TAGS -->
+<!-- TWITTER TAGS --><meta charset="utf-8"><meta name="twitter:card" content="summary" /><meta name="twitter:description" content="A Dota 2 sorter page. Rank your favorites!" /><meta name="twitter:title" content="Dota 2 Sorter" /><meta name="twitter:site" content="tumblr" /><!-- END TWITTER TAGS -->
  
 <script src="https://assets.tumblr.com/assets/scripts/tumblelog.js?_v=a9e2d0b0ade5958a1a2a936adf448061"></script>
 <meta http-equiv="x-dns-prefetch-control" content="off"/>
